--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "typechain": "^8.1.0"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.7.3"
+    "@openzeppelin/contracts": "^4.7.3",
+    "ganache-cli": "^6.12.2",
+    "mocha": "^10.0.0",
+    "web3": "^1.7.5"
   }
 }
